5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1618_2924.log
== TEST (2019-04-02 10:27:22) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

60 seg = 1 min

t = pi + vm * it

-- ERROR:
File "XXXX", line 5
    60 seg = 1 min
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:35) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

seg60 = 1 min

t = pi + vm * it

-- ERROR:
File "XXXX", line 5
    seg60 = 1 min
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:07) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

min =60 seg

t = pi + vm * it

-- ERROR:
File "XXXX", line 5
    min =60 seg
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:15) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

min =60seg

t = pi + vm * it

-- ERROR:
File "XXXX", line 5
    min =60seg
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:20) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

min =60

t = pi + vm * it

-- ERROR:
File "XXXX", line 5
    min =60seg
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:24) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

min = 60

t = pi + vm * it

-- ERROR:
File "XXXX", line 5
    min =60seg
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:51) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

min = 60

t = pi + vm * it

print(t)

-- OUTPUT:
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:29:08) 
-- CODE:
pi = int(input("posicao inicial: "))
vm = int(input("velocidade do movel: "))
it = int(input("intervalo de tempo: "))

min = 60

t = pi + vm * it

print(t)

-- EXECUTION TIME:
0.181948
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
3002
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
4252
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
3058
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
